# dialog-code

./: .coderabbit.yaml  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  go.mod  requirements.md
.github/workflows/: test.yml
cmd/dcode/: BUILD.bazel  app.go  app_robot.go  app_test.go  auto_reject_loop_test.go  hook.go  hook_test.go  main.go  main_test.go  scrollback_filter_test.go
internal/choice/: BUILD.bazel  choice.go  choice_clean_dialog_test.go  choice_test.go
internal/debug/: BUILD.bazel  debug.go
internal/deduplication/: BUILD.bazel  deduplication.go  deduplication_test.go  mock_time.go  types.go
internal/dialog/: BUILD.bazel  dialog.go  simple_dialog.go  simple_dialog_test.go
internal/parser/: BUILD.bazel  dialog_parser.go  dialog_parser_test.go
internal/types/: BUILD.bazel  types.go  types_test.go
