load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "dcode_lib",
    srcs = [
        "hook.go",
    ],
    importpath = "github.com/takahirom/dialog-code/cmd/dcode",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/debug",
        "//internal/dialog",
    ],
)

go_binary(
    name = "dcode",
    embed = [":dcode_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "dcode_test",
    srcs = [
        "hook_test.go",
    ],
    embed = [":dcode_lib"],
    deps = [
        "//internal/dialog",
    ],
)