load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "choice",
    srcs = ["choice.go"],
    importpath = "github.com/takahirom/dialog-code/internal/choice",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/debug",
        "//internal/types",
    ],
)

go_test(
    name = "choice_test",
    srcs = ["choice_test.go"],
    embed = [":choice"],
    deps = [
        "//internal/types",
    ],
)