load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "deduplication",
    srcs = [
        "deduplication.go",
        "mock_time.go", 
        "types.go",
    ],
    importpath = "github.com/takahirom/dialog-code/internal/deduplication",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "deduplication_test",
    srcs = ["deduplication_test.go"],
    embed = [":deduplication"],
)