load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dialog",
    srcs = [
        "simple_dialog.go",
    ],
    importpath = "github.com/takahirom/dialog-code/internal/dialog",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/debug",
    ],
)

go_test(
    name = "dialog_test",
    srcs = ["simple_dialog_test.go"],
    embed = [":dialog"],
)