load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parser",
    srcs = ["dialog_parser.go"],
    importpath = "github.com/takahirom/dialog-code/internal/parser",
    visibility = ["//visibility:public"],
)

go_test(
    name = "parser_test",
    srcs = ["dialog_parser_test.go"],
    embed = [":parser"],
)