load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "types",
    srcs = ["types.go"],
    importpath = "github.com/takahirom/dialog-code/internal/types",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/deduplication"],
)

go_test(
    name = "types_test",
    srcs = ["types_test.go"],
    embed = [":types"],
)